docs(#123): add Anti-Reinvention Guardrail section to SKILL.md
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>